# sentiment-finetune

./: .gitignore  README.md  app.py  infer.py  main.py  pyproject.toml  requirements.txt  train.py
doc/: finetuning_guide.md
model/roberta_yelp3/: config.json  confusion_matrix.csv  metrics.json
sentiment_finetune/: config.py  data.py  infer_core.py  metrics.py  pipeline.py  trainer.py
